fix: wrong font size

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -10,7 +10,7 @@
   --font-size-m: 16px;
   --font-size-l: 18px;
   --font-size-xl: 20px;
-  --font-size-xxl: 28px;
+  --font-size-xxl: 26px;
 
   // font weights
   --font-weight-regular: 400;
